[package]
name = "shorturl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "1.0.0"
derive_more = "0.99.17"
serde = { version = "1.0.137" }
dotenv = "0.15.0"
config = "0.10.1"
chrono = "0.4.19"
log = "0.4"
tracing = "0.1.29"
tracing-subscriber = { version = "0.2" }
eyre ="0.4"
color-eyre = "0.3"
sqlx = { version = "0.4", features = [ "runtime-actix-native-tls" , "postgres" ] }