[package]
name = "test_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6.1"
tracing = "0.1.34"
tracing-subscriber = "0.2"
dotenv = "0.15.0"
eyre = "0.6.5"

